--- a/style.css
+++ b/style.css
@@ -37,8 +37,8 @@ body {
     border: none;
     border-radius: 10px;
     background: transparent;
-    border: 1px solid #ffffff;
-    color: #fff;
+    border: 2px solid #000000;
+    color: #000000 !important;
     font-size: 15px;
     width: 300px;
     color: black;
